# hermes-hybrid

./: .gitignore  AGENTS.md  COMPLETION.md  Cargo.toml  README.md  STATUS.md  TODO.md  test_agent_bridge.py
.github/workflows/: release.yml
agent/: .env.example  SETUP.md
agent/hermes_cli/: agent_bridge.py
core/: Cargo.toml
core/src/: lib.rs
docs/: architecture.md  ci.md  deployment.md  phase3_completion.md  phase45_completion.md  progress.md  protocol.md
gateway/: Cargo.toml  config.example.yaml
gateway/src/: lib.rs  main.rs
gateway/src/agent_bridge/: mod.rs  protocol.rs  subprocess.rs  types.rs
gateway/src/http/: mod.rs
gateway/src/router/: mod.rs  session.rs  stream.rs
scripts/: agent_bridge_template.py  prepare-agent.sh  start.sh  stop.sh  test_bridge.sh
systemd/: hermes-hybrid.service
