[package]
name = "hermes-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
async-trait = "0.1"

hermes-core = { path = "../core" }

[lib]
name = "hermes_gateway"
path = "src/lib.rs"

[[bin]]
name = "hermes-gateway"
path = "src/main.rs"
