[package]
name = "hermes-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
async-trait = "0.1"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"

hermes-core = { path = "../core" }

[lib]
name = "hermes_gateway"
path = "src/lib.rs"

[[bin]]
name = "hermes-gateway"
path = "src/main.rs"
